syntax = "proto3";
package proto;

option go_package = "./proto";
// import "google/protobuf/timestamp.proto";

enum event_level {
	debug = 0;
	info = 1;
	warning = 2;
	error = 3;
	critical = 4;
}

message LogRequest {
	string event_id = 1;
	string event_at = 2;
	event_level event_level = 3;
	string appName = 4;
	string appVersion = 5;

	string Service = 6; // service name
	string id = 7; // uuid
	string at = 8; // RFC3339Milli
	// google.protobuf.Timestamp at = 8;
	string biz_name = 9;
    map<string,string> biz_data = 10; // query, status, error, client
	map<string,string> identities = 11; // accountId, tokenId, ip, role
	string code = 12; // ok, warn, error, panic
	double latency_milli = 13;
	bytes data = 14; // json bytes
}

message LogResponse {
    string event_id = 1;
	string id = 2;
}

service LogService {
	rpc Push(LogRequest) returns(LogResponse) {};
}
